--- a/data/freesolv/meta.yaml
+++ b/data/freesolv/meta.yaml
@@ -1,12 +1,6 @@
-bibtex: '@article{mobley2013experimental,
-
-  title={Experimental and calculated small molecule hydration free energies},
-
-  author={Mobley, David L},
-
-  year={2013}
-
-  '
+bibtex: "@article{mobley2013experimental,\n        title={Experimental and calculated\
+  \ small molecule hydration free energies},\n        author={Mobley, David L},\n\
+  \        year={2013}"
 description: Experimental and calculated small molecule hydration free energies
 identifiers:
 - description: SMILES
