--- a/.github/workflows/install.yaml
+++ b/.github/workflows/install.yaml
@@ -15,7 +15,7 @@ jobs:
           activate-environment: chemnlp
           python-version: 3.7
           auto-update-conda: true
-          auto-activate-base: false
+          auto-activate-base: true
       - name: Validate yaml
         run: |
           python -m dev.validate data
