try activating manually

--- a/.github/workflows/install.yaml
+++ b/.github/workflows/install.yaml
@@ -18,9 +18,11 @@ jobs:
           auto-activate-base: false
       - name: Validate yaml
         run: |
+          conda activate chemnlp  
           python -m dev.validate data
       - name: Lint
         run: |
+          conda activate chemnlp
           black --check .
           isort --check-only .
           flake8 .
