feat: update lipophilicity

--- a/data/lipophilicity/meta.yaml
+++ b/data/lipophilicity/meta.yaml
@@ -1,13 +1,21 @@
-bibtex: '?'
+bibtex: "@techreport{hersey2015chembl,\n      title={ChEMBL Deposited Data Set-AZ\\\
+  _dataset},\n      author={Hersey, Anne},\n      year={2015},\n      institution={Technical\
+  \ Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~\u2026}\n \
+  \   }"
 description: Experimental results of octanol/water distribution coefficient (logD
   at pH 7.4).
 identifiers:
 - description: SMILES
   id: SMILES
   type: SMILES
-license: '?'
+license: CC BY-SA 3.0
 links:
 - https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv
+- https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml
+- https://deepchem.readthedocs.io/en/latest/api_reference/moleculenet.html
+- https://www.ebi.ac.uk/chembl/document_report_card/CHEMBL3301361/
+- https://chembl.gitbook.io/chembl-interface-documentation/about#data-licensing
+- https://creativecommons.org/licenses/by-sa/3.0/
 name: lipophilicity
 num_points: 4200
 targets:
