--- a/data/lipophilicity/meta.yaml
+++ b/data/lipophilicity/meta.yaml
@@ -24,6 +24,7 @@ links:
 - https://creativecommons.org/licenses/by-sa/3.0/
 num_points: 4200
 url: https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv
-bibtex: "@techreport{hersey2015chembl,\n        title={ChEMBL Deposited Data Set-AZ\\\
-  _dataset},\n        author={Hersey, Anne},\n        year={2015},\n        institution={Technical\
+bibtex:
+- "@techreport{hersey2015chembl,\n        title={ChEMBL Deposited Data Set-AZ\\_dataset},\n\
+  \        author={Hersey, Anne},\n        year={2015},\n        institution={Technical\
   \ Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~\u2026}}"
