--- a/data/freesolv/meta.yaml
+++ b/data/freesolv/meta.yaml
@@ -1,55 +1,46 @@
 name: freesolv
 description: Experimental and calculated small molecule hydration free energies
-identifiers:
-  - description: SMILES
-    id: SMILES
-    type: SMILES
-  - description: IUPAC
-    id: iupac_name
-    type: IUPAC
-license: CC BY-NC-SA 4.0
-num_points: 642
 targets:
-  - description: experimental hydration free energy value
-    id: exp_value
-    names:
-      - hydration free energy
-    type: continuous
-    units: kcal/mol
-  - description: experimental hydration free energy uncertainty
-    id: exp_uncertainty
-    names:
-      - hydration free energy uncertainty
-    type: continuous
-    units: kcal/mol
-  - description: mobley group calculated value
-    id: GAFF
-    names:
-      - hydration free energy calculated using the GAFF small molecule force field and AMBER
-    type: continuous
-    units: kcal/mol
-  - description: mobley group calculated value calculated uncertainty
-    id: calc_uncertainty
-    names:
-      - uncertainty of hydration free energy calculated using the GAFF small molecule force field and AMBER
-    type: continuous
-    units: kcal/mol
+- id: exp_value
+  description: experimental hydration free energy value
+  units: kcal/mol
+  type: continuous
+  names:
+  - hydration free energy
+- id: exp_uncertainty
+  description: experimental hydration free energy uncertainty
+  units: kcal/mol
+  type: continuos
+  names:
+  - hydration free energy uncertainty
+- id: GAFF
+  description: mobley group calculated value
+  units: kcal/mol
+  type: continuous
+  names:
+  - GAFF
+  - mobley group calculated value
+- id: calc_uncertainty
+  description: mobley group calculated value calculated uncertainty
+  units: kcal/mol
+  type: continuos
+  names:
+  - GAFF uncertainty
+  - mobley group calculated value uncertainty
+identifiers:
+- id: SMILES
+  type: SMILES
+  description: SMILES
+- id: iupac_name
+  type: IUPAC
+  description: IUPAC
+license: CC BY-NC-SA 4.0
 links:
-  - name: dataset
-    url: https://github.com/MobleyLab/FreeSolv
-    description: Dataset and issue tracker
+- https://github.com/MobleyLab/FreeSolv
+- https://escholarship.org/uc/item/6sd403pz
+num_points: 642
+url: https://github.com/MobleyLab/FreeSolv
 bibtex:
-  - |
-    "@article{Mobley_2014,
-    doi = {10.1007/s10822-014-9747-x},
-    url = {https://doi.org/10.1007%2Fs10822-014-9747-x},
-    year = 2014,
-    month = {jun},
-    publisher = {Springer Science and Business Media {LLC}},
-    volume = {28},
-    number = {7},
-    pages = {711--720},
-    author = {David L. Mobley and J. Peter Guthrie},
-    title = {{FreeSolv}: a database of experimental and calculated hydration free energies, with input files},
-    journal = {J Comput Aided Mol Des}
-    }"
+- "@article{mobley2013experimental,\n            title={Experimental and calculated\
+  \ small molecule hydration free energies},\n            author={Mobley, David L},\n\
+  \            year={2013}"
