feat: update notebook #3b

--- a/data/freesolv/meta.yaml
+++ b/data/freesolv/meta.yaml
@@ -10,7 +10,7 @@ targets:
 - id: exp_uncertainty
   description: experimental hydration free energy uncertainty
   units: kcal/mol
-  type: continuos
+  type: continuous
   names:
   - hydration free energy uncertainty
 - id: GAFF
@@ -23,7 +23,7 @@ targets:
 - id: calc_uncertainty
   description: mobley group calculated value calculated uncertainty
   units: kcal/mol
-  type: continuos
+  type: continuous
   names:
   - GAFF uncertainty
   - mobley group calculated value uncertainty
