--- a/data/caco2_wang/meta.yaml
+++ b/data/caco2_wang/meta.yaml
@@ -18,7 +18,7 @@ identifiers:
   type: SMILES
   description: SMILES
 - id: compound_id
-  type: OTHER
+  type: Other
   description: Compound id / name
 license: CC BY 4.0
 links:
