feat: address review

--- a/data/caco2_wang/meta.yaml
+++ b/data/caco2_wang/meta.yaml
@@ -18,16 +18,14 @@ identifiers:
     - id: SMILES
       type: SMILES
       description: SMILES
-    - id: compound_id
+    - id: compound_name
       type: Other
-      description: Compound id / name
+      description: compound name
       names:
-          - compound id
+          - compound
           - compound name
 license: CC BY 4.0
 links:
-    - url: https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al
-      description: tdcommons.ai dataset url
     - url: https://pubs.acs.org/doi/10.1021/acs.jcim.5b00642
       description: corresponding publication
 num_points: 910
