chore: validate links

--- a/data/flashpoint/meta.yaml
+++ b/data/flashpoint/meta.yaml
@@ -20,8 +20,7 @@ identifiers:
 license: CC BY 4.0
 num_points: 9878 # downloaded dataset has 14696 datapoints, but there are duplicate smiles
 links:
-    - name: dataset
-      url: https://figshare.com/ndownloader/files/18509711
+    - url: https://figshare.com/ndownloader/files/18509711
       description: Original figshare dataset
 bibtex:
     - |
