--- a/data/pampa_ncats/meta.yaml
+++ b/data/pampa_ncats/meta.yaml
@@ -22,10 +22,11 @@ identifiers:
       description: SMILES
 license: CC BY 4.0
 links:
+    - url: https://tdcommons.ai/single_pred_tasks/adme/#pampa-permeability-ncats
+      description: original dataset link
     - url: https://journals.sagepub.com/doi/full/10.1177/24725552211017520
       description: corresponding publication
 num_points: 2034
-url: https://tdcommons.ai/single_pred_tasks/adme/#pampa-permeability-ncats
 bibtex:
     - |-
       @article{siramshetty2021validating,
