--- a/data/lipophilicity/meta.yaml
+++ b/data/lipophilicity/meta.yaml
@@ -15,6 +15,8 @@ identifiers:
       description: SMILES
 license: CC BY-SA 3.0
 links:
+    - url: https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv
+      description: original dataset link
     - url: https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml
       description: original meta data
     - url: https://deepchem.readthedocs.io/en/latest/api_reference/moleculenet.html#lipo-datasets
@@ -26,7 +28,6 @@ links:
     - url: https://creativecommons.org/licenses/by-sa/3.0/
       description: used dataset license
 num_points: 4200
-url: https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv
 bibtex:
     - |-
       @techreport{hersey2015chembl,
