--- a/data/lipophilicity/meta.yaml
+++ b/data/lipophilicity/meta.yaml
@@ -9,6 +9,8 @@ targets:
       names:
           - octanol/water distribution coefficient (logD at pH 7.4)
           - octanol/water distribution coefficient
+      uris:
+          - http://www.bioassayontology.org/bao#BAO_0010241
 identifiers:
     - id: SMILES
       type: SMILES
