--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,12 @@ dependencies = [
         "numpy>=1.21.2",
         "openpyxl>=3.0.9",
         "pandas>=1.3.3",
-        "pytdc>=0.3.9"
+        "peft",
+        "pydantic",
+        "pytdc>=0.3.9",
+        "transformers",
 ]
+
 dynamic = ["version"]
 
 [project.optional-dependencies]
@@ -23,9 +27,8 @@ dev = [
         "flake8>=3.8.3",
         "isort>=5.0.0",
         "pre-commit",
-        "pydantic",
         "pydantic_yaml",
-        "pytest", 
+        "pytest",
 ]
 
 [tool.setuptools_scm]
