--- a/configs/tune.yaml
+++ b/configs/tune.yaml
@@ -27,3 +27,6 @@ train:
     learning_rate: 3e-4
     per_device_train_batch_size: 32
     per_device_eval_batch_size: 32
+    is_wandb: true
+    wandb_project: chemnlp
+    run_name: pipeline_test
