--- a/data/hERG_blockers/meta.yaml
+++ b/data/hERG_blockers/meta.yaml
@@ -15,6 +15,8 @@ targets:
   - hERG blocker
   - Human ether-a-go-go related gene (hERG) blocker
   - Activity against Human ether-a-go-go related gene (hERG)
+  uris:
+  - https://bioportal.bioontology.org/ontologies/MI?p=classes&conceptid=http%3A%2F%2Fpurl.obolibrary.org%2Fobo%2FMI_2136
 identifiers:
 - id: SMILES
   type: SMILES
