--- a/data/SARSCoV2_Vitro_Touret/meta.yaml
+++ b/data/SARSCoV2_Vitro_Touret/meta.yaml
@@ -12,7 +12,9 @@ targets:
   - activity against SARSCoV2
   - COVID19
   - Coronavirus disease
-  - Coronavirus
+  - Activity vs Coronavirus
+  uris:
+  - https://bioportal.bioontology.org/ontologies/DOID?p=classes&conceptid=http%3A%2F%2Fpurl.obolibrary.org%2Fobo%2FDOID_0080600
 identifiers:
 - id: SMILES
   type: SMILES
