--- a/data/SARSCoV2_Vitro_Touret/meta.yaml
+++ b/data/SARSCoV2_Vitro_Touret/meta.yaml
@@ -23,8 +23,9 @@ license: CC BY 4.0
 links:
 - url: https://doi.org/10.1038/s41598-020-70143-6
   description: corresponding publication
+- url: https://tdcommons.ai/single_pred_tasks/hts/#sars-cov-2-in-vitro-touret-et-al
+  description: Data source
 num_points: 1484
-url: https://tdcommons.ai/single_pred_tasks/hts/#sars-cov-2-in-vitro-touret-et-al
 bibtex:
 - |-
   @article{Touret2020,
