Add URI, move url to links

--- a/data/Carcinogens/meta.yaml
+++ b/data/Carcinogens/meta.yaml
@@ -14,6 +14,9 @@ targets:
   - any substance, radionuclide, or radiation that promotes carcinogenesis
   - damage the genome
   - substance promotes carcinogenesis
+  uris:
+  - https://bioportal.bioontology.org/ontologies/NCIT?p=classes&conceptid=http%3A%2F%2Fncicb.nci.nih.gov%2Fxml%2Fowl%2FEVS%2FThesaurus.owl%23C347
+  - https://bioportal.bioontology.org/ontologies/SNOMEDCT?p=classes&conceptid=http%3A%2F%2Fpurl.bioontology.org%2Fontology%2FSNOMEDCT%2F88376000
 identifiers:
 - id: SMILES
   type: SMILES
@@ -24,8 +27,8 @@ links:
   description: corresponding publication
 - url: https://doi.org/10.1021/ci300367a
   description: corresponding publication
- - url: https://tdcommons.ai/single_pred_tasks/tox/#carcinogens
-   description: original dataset
+- url: https://tdcommons.ai/single_pred_tasks/tox/#carcinogens
+  description: Data source
 num_points: 280
 bibtex:
 - |-
