--- a/data/HIV/meta.yaml
+++ b/data/HIV/meta.yaml
@@ -13,6 +13,9 @@ targets:
   - activity against HIV
   - HIV disease
   - HIV
+  uris:
+  - https://bioportal.bioontology.org/ontologies/MESH?p=classes&conceptid=http%3A%2F%2Fpurl.bioontology.org%2Fontology%2FMESH%2FD006678
+  - https://bioportal.bioontology.org/ontologies/OCHV?p=classes&conceptid=http%3A%2F%2Fsbmi.uth.tmc.edu%2Fontology%2Fochv%236185
 identifiers:
 - id: SMILES
   type: SMILES
@@ -24,8 +27,8 @@ links:
 - url: https://doi.org/10.1039/C7SC02664A
   description: corresponding publication
 - url: https://tdcommons.ai/single_pred_tasks/hts/#hiv
-  description: data soure
-num_points: 1484
+  description: data source
+num_points: 41127
 bibtex:
 - |-
   @article{Wu2018,
