--- a/data/caco2_wang/meta.yaml
+++ b/data/caco2_wang/meta.yaml
@@ -1,9 +1,8 @@
 ---
 name: caco2_wang
-description: |-
-    The human colon epithelial cancer cell line, Caco-2, is used as an in vitro model
-    to simulate the human intestinal tissue. The experimental result on the rate of drug passing through
-    the Caco-2 cells can approximate the rate at which the drug permeates through the human intestinal tissue.
+description: The human colon epithelial cancer cell line, Caco-2,         is used as an in vitro model to simulate the human intestinal tissue.         The
+    experimental result on the rate of drug passing through         the Caco-2 cells can approximate the rate at which the drug permeates         through
+    the human intestinal tissue.
 targets:
     - id: permeability
       description: Caco-2 cell effective permeability.
@@ -14,6 +13,11 @@ targets:
           - Caco-2 cell permeability
           - Caco-2 permeability
           - permeability
+      pubchem_aids:
+          - 678378
+      uris:
+          - http://www.bioassayontology.org/bao#BAO_0010008
+split_col: split
 identifiers:
     - id: SMILES
       type: SMILES
@@ -26,10 +30,11 @@ identifiers:
           - compound name
 license: CC BY 4.0
 links:
+    - url: https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al
+      description: original data set link
     - url: https://pubs.acs.org/doi/10.1021/acs.jcim.5b00642
       description: corresponding publication
 num_points: 910
-url: https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al
 bibtex:
     - |-
       @article{wang2016adme,
