--- a/data/cav3_t-type_calcium_channels_butkiewicz/meta.yaml
+++ b/data/cav3_t-type_calcium_channels_butkiewicz/meta.yaml
@@ -1,13 +1,9 @@
 ---
 name: cav3_t-type_calcium_channels_butkiewicz
-description: 'These are nine high-quality high-throughput screening (HTS) datasets from [1]. These datasets were curated from HTS data at the PubChem database
-    [2]. Typically, HTS categorizes small molecules into hit, inactive, or unspecified against a certain therapeutic target. However, a compound may be
-    falsely classified as a hit due to experimental artifacts such as optical interference. Moreover, because the screening is performed without duplicates,
-    and the cutoff is often set loose to minimize the false negative rates, the results from the primary screens often contain high false positive rates
-    [3]. Hence the result from the primary screen is only used as the first iteration to reduce the compound library to a smaller set of further confirmatory
-    tests. Here each dataset is carefully collated through confirmation screens to validate active compounds. The curation process is documented in [1].
-    Each dataset is identified by the PubChem Assay ID (AID). Features of the datasets: (1) At least 150 confirmed active compounds present; (2) Diverse
-    target classes; (3) Realistic (large number and highly imbalanced label).'
+description: "\n        This dataset was initially curated from HTS data at the PubChem database.         The curation process is documented in Butkiewicz\
+    \ et al.         Primary screening with AID 449739 identified inhibitors of Cav3 T-type calcium channels. \\ \n        Four follow-up screens were performed\
+    \ to confirm inhibitory effects on smaller sets of compounds         involving AID 493021, AID 493022, AID 493023, and AID 493041.\n        AID 489005\
+    \ was performed as counter screen validating active compounds of the primary screen.         "
 targets:
     - id: activity_cav3_t_type_calcium_channels
       description: whether it active against cav3 t-type calcium channels receptor (1) or not (0).
@@ -18,6 +14,15 @@ targets:
           - cav3 t-type calcium channels Inhibitor
           - activity against cav3 t-type calcium channels
           - cav3 t-type calcium channels receptor
+      pubchem_aids:
+          - 1053190
+          - 489005
+          - 493021
+          - 493022
+          - 493023
+          - 493041
+      uris:
+          - http://purl.obolibrary.org/obo/CHEBI_194338
 identifiers:
     - id: SMILES
       type: SMILES
@@ -30,6 +35,7 @@ links:
       description: corresponding publication
     - url: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/
       description: corresponding publication
+split_col: split
 num_points: 100875
 url: https://tdcommons.ai/single_pred_tasks/hts/#butkiewicz-et-al
 bibtex:
@@ -43,7 +49,7 @@ bibtex:
                     volume = {18},
                     number = {1},
                     pages = {735--756},
-                    author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller and Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens Meiler},
+                    author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller and Jeffrey Mendenhall                 and Pedro Teixeira and C. Weaver and Jens Meiler},
                     title = {Benchmarking Ligand-Based Virtual High-Throughput Screening with the {PubChem} Database},
                     journal = {Molecules}}
     - |-
@@ -56,7 +62,7 @@ bibtex:
                     volume = {47},
                     number = {D1},
                     pages = {D1102--D1109},
-                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte and Jia He and Siqian He and Qingliang Li and Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
+                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte and Jia He and Siqian He             and Qingliang Li and Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and Leonid Zaslavsky             and Jian Zhang and Evan E Bolton},
                     title = {{PubChem} 2019 update: improved access to chemical data},
                     journal = {Nucleic Acids Research}}
     - |-
@@ -67,6 +73,6 @@ bibtex:
                     publisher = {Chem Inform},
                     volume = {3},
                     number = {1},
-                    author = {Butkiewicz, M.  and Wang, Y.  and Bryant, S. H.  and Lowe, E. W.  and Weaver, D. C.  and Meiler, J.},
+                    author = {Butkiewicz, M.  and Wang, Y.  and Bryant, S. H.  and Lowe, E. W.  and Weaver, D. C.              and Meiler, J.},
                     title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets from the {P}ub{C}hem {D}atabase}},
                     journal = {Chemical Science}}
