chore: continue cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,11 @@ dmypy.json
 
 # wandb
 scripts/wandb
+
+# scratch
+scratch/
+
+
+# let's don't commit data unless we really want to
+*.tab
+*.csv
