--- a/data/m1_muscarinic_receptor_antagonists_butkiewicz/meta.yaml
+++ b/data/m1_muscarinic_receptor_antagonists_butkiewicz/meta.yaml
@@ -1,72 +1,72 @@
----
 name: m1_muscarinic_receptor_antagonists_butkiewicz
-description: 'These are nine high-quality high-throughput screening (HTS) datasets from [1]. These datasets were curated from HTS data at the PubChem database
-    [2]. Typically, HTS categorizes small molecules into hit, inactive, or unspecified against a certain therapeutic target. However, a compound may be
-    falsely classified as a hit due to experimental artifacts such as optical interference. Moreover, because the screening is performed without duplicates,
-    and the cutoff is often set loose to minimize the false negative rates, the results from the primary screens often contain high false positive rates
-    [3]. Hence the result from the primary screen is only used as the first iteration to reduce the compound library to a smaller set of further confirmatory
-    tests. Here each dataset is carefully collated through confirmation screens to validate active compounds. The curation process is documented in [1].
-    Each dataset is identified by the PubChem Assay ID (AID). Features of the datasets: (1) At least 150 confirmed active compounds present; (2) Diverse
-    target classes; (3) Realistic (large number and highly imbalanced label).'
+description: Primary screen AID628 confirmed by screen AID677.         AID859 confirmed
+  activity on rat M1 receptor.         The counter screen AID860 removed non-selective
+  compounds         being active also at the rat M4 receptor.         Final set of
+  active compoundsobtained by subtracting active compounds of AID860             from
+  those in AID677, resulting in 448 total active compounds.
 targets:
-    - id: m1_muscarinic_antagonists
-      description: whether it antagonists on m1 muscarinic receptor (1) or not (0).
-      units: antagonists
-      type: categorical
-      names:
-          - m1 muscarinic activity
-          - m1 muscarinic antagonists
-          - muscarinic
-          - m1 muscarinic receptor
+- id: m1_muscarinic_antagonists
+  description: whether it negatively modulates m1 muscarinic receptor (1) or not (0).
+  units: null
+  type: boolean
+  names:
+  - a negative modulator of M1 muscarinic receptors
+  - negatively modulating M1 muscarinic receptors
+  pubchem_aids:
+  - 628
+  - 677
+  - 860
+  uris: []
 identifiers:
-    - id: SMILES
-      type: SMILES
-      description: SMILES
+- id: SMILES
+  type: SMILES
+  description: SMILES
 license: CC BY 4.0
 links:
-    - url: https://doi.org/10.3390/molecules18010735
-      description: corresponding publication
-    - url: https://doi.org/10.1093/nar/gky1033
-      description: corresponding publication
-    - url: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/
-      description: corresponding publication
+- url: https://doi.org/10.3390/molecules18010735
+  description: corresponding publication
+- url: https://doi.org/10.1093/nar/gky1033
+  description: corresponding publication
+- url: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/
+  description: corresponding publication
+split_col: split
 num_points: 61756
 url: https://tdcommons.ai/single_pred_tasks/hts/#butkiewicz-et-al
 bibtex:
-    - |-
-      @article{Butkiewicz2013,
-                    doi = {10.3390/molecules18010735},
-                    url = {https://doi.org/10.3390/molecules18010735},
-                    year = {2013},
-                    month = jan,
-                    publisher = {{MDPI} {AG}},
-                    volume = {18},
-                    number = {1},
-                    pages = {735--756},
-                    author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller and Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens Meiler},
-                    title = {Benchmarking Ligand-Based Virtual High-Throughput Screening with the {PubChem} Database},
-                    journal = {Molecules}}
-    - |-
-      @article{Kim2018,
-                    doi = {10.1093/nar/gky1033},
-                    url = {https://doi.org/10.1093/nar/gky1033},
-                    year = {2018},
-                    month = oct,
-                    publisher = {Oxford University Press ({OUP})},
-                    volume = {47},
-                    number = {D1},
-                    pages = {D1102--D1109},
-                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte and Jia He and Siqian He and Qingliang Li and Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
-                    title = {{PubChem} 2019 update: improved access to chemical data},
-                    journal = {Nucleic Acids Research}}
-    - |-
-      @article{Butkiewicz2017,
-                    doi = {},
-                    url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/},
-                    year = {2017},
-                    publisher = {Chem Inform},
-                    volume = {3},
-                    number = {1},
-                    author = {Butkiewicz, M.  and Wang, Y.  and Bryant, S. H.  and Lowe, E. W.  and Weaver, D. C.  and Meiler, J.},
-                    title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets from the {P}ub{C}hem {D}atabase}},
-                    journal = {Chemical Science}}
+- |-
+  @article{Butkiewicz2013,
+                doi = {10.3390/molecules18010735},
+                url = {https://doi.org/10.3390/molecules18010735},
+                year = {2013},
+                month = jan,
+                publisher = {{MDPI} {AG}},
+                volume = {18},
+                number = {1},
+                pages = {735--756},
+                author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller                 and Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens Meiler},
+                title = {Benchmarking Ligand-Based Virtual High-Throughput Screening                 with the {PubChem} Database},
+                journal = {Molecules}}
+- |-
+  @article{Kim2018,
+                doi = {10.1093/nar/gky1033},
+                url = {https://doi.org/10.1093/nar/gky1033},
+                year = {2018},
+                month = oct,
+                publisher = {Oxford University Press ({OUP})},
+                volume = {47},
+                number = {D1},
+                pages = {D1102--D1109},
+                author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte                 and Jia He and Siqian He and Qingliang Li and Benjamin A Shoemaker                     and Paul A Thiessen and Bo Yu and Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
+                title = {{PubChem} 2019 update: improved access to chemical data},
+                journal = {Nucleic Acids Research}}
+- |-
+  @article{Butkiewicz2017,
+                doi = {},
+                url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/},
+                year = {2017},
+                publisher = {Chem Inform},
+                volume = {3},
+                number = {1},
+                author = {Butkiewicz, M.  and Wang, Y.  and Bryant, S. H.                  and Lowe, E. W.  and Weaver, D. C.  and Meiler, J.},
+                title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets                 from the {P}ub{C}hem {D}atabase}},
+                journal = {Chemical Science}}
