--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dev = [
         "pre-commit",
         "pydantic_yaml",
         "pytest",
+        "pubchempy"
 ]
 
 # [project.optional-dependencies]
